<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".AboutActivity">

    <include
        android:id="@+id/about_toolbar"
        layout="@layout/app_bar_layout" />

    <ImageView
        android:layout_marginTop="70dp"
        android:src="@drawable/conversation"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/icon" />

    <TextView
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:text="@string/stark_chat_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/version_1"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="SmallSp" />

    <TextView
        android:textColor="@color/white"
        android:layout_marginTop="400dp"
        android:layout_gravity="center"
        android:text="This app is made by Alok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
    android:textColor="@color/white"
    android:layout_gravity="center"
    android:text="Lot of resources used for this Application like TVAC, Node JS"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="and Firebase etc."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>